--- a/src/main/resources/templates/traders.html
+++ b/src/main/resources/templates/traders.html
@@ -22,6 +22,11 @@
         <a class="navbar-brand" href="/dashboard">
             <i class="bi bi-graph-up-arrow"></i> TradeWise 监控系统
         </a>
+        <form method="post" action="/logout" style="margin: 0;">
+            <button type="submit" class="btn btn-outline-light btn-sm">
+                <i class="bi bi-box-arrow-right"></i> 退出
+            </button>
+        </form>
     </div>
 </nav>
 
