--- a/src/main/resources/templates/features.html
+++ b/src/main/resources/templates/features.html
@@ -62,6 +62,11 @@
                             <i class="bi bi-gear"></i> 系统状态
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">
+                            <i class="bi bi-person-badge"></i> 用户管理
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
