--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -53,6 +53,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/symbol-config">
+                            <i class="bi bi-coin"></i> 币对管理
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/features">
                             <i class="bi bi-toggles"></i> 功能开关
                         </a>
