--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -41,6 +41,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/signals">
+                            <i class="bi bi-graph-up"></i> 信号历史
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/traders">
                             <i class="bi bi-people"></i> 交易员管理
                         </a>
@@ -51,13 +56,18 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/symbol-config">
+                            <i class="bi bi-coin"></i> 交易对配置
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/features">
                             <i class="bi bi-toggles"></i> 功能开关
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/system">
-                            <i class="bi bi-gear"></i> 系统状态
+                            <i class="bi bi-gear"></i> 系统设置
                         </a>
                     </li>
                     <li class="nav-item">
