--- a/src/main/resources/templates/admin/components/tw-admin-topbar.html
+++ b/src/main/resources/templates/admin/components/tw-admin-topbar.html
@@ -91,7 +91,7 @@
         }
     </style>
 </head>
-<body>
+<body th:fragment="topbar">
     <div class="topbar" id="topbar">
         <div class="user-menu">
             <div class="user-avatar" id="userAvatar">A</div>
