--- a/src/main/resources/templates/admin/components/tw-admin-sidebar.html
+++ b/src/main/resources/templates/admin/components/tw-admin-sidebar.html
@@ -108,6 +108,9 @@
             <a href="/admin/traders" class="menu-item" data-page="traders">
                 <i>📈</i> 交易员配置
             </a>
+            <a href="/admin/orders" class="menu-item" data-page="orders">
+                <i>📋</i> 交易员订单
+            </a>
             <a href="/admin/users" class="menu-item" data-page="users">
                 <i>👥</i> 用户管理
             </a>
